refactor: clear SonarCloud maintainability smells (constants, complexity, warnings)
Extract duplicated string literals into constants across 10 backend classes.

Reduce cognitive complexity in 5 methods via behaviour-preserving helper extraction.

Flatten ConsultationModal row handlers; add updateAdministeredField helper.

Warnings: explicit button type, stable list keys, Stream.toList, zoned .now(),

concise regex, merged if, split declaration, extracted nested try, removed dup import.